[gd_scene load_steps=3 format=3 uid="uid://culmdc4i14jl4"]

[ext_resource type="Script" path="res://scenes/objects/office/computer_table.gd" id="1_clxyr"]
[ext_resource type="Texture2D" uid="uid://b30o6cfukruwq" path="res://graphics/objects/office/computer_bord.png" id="1_px011"]

[node name="ComputerTable" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_clxyr")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(226, 167)
polygon = PackedVector2Array(-222, 66, -32, -46, -28, -109, 95, -168, 153, -153, 158, -155, 200, -144, 200, 94, 65, 208, 25, 206, -129, 206, -225, 210, -221, 141, -222, 96)

[node name="ComputerTableSprite" type="Sprite2D" parent="."]
position = Vector2(212, 186)
texture = ExtResource("1_px011")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
